[project]
name = "time-series-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost==1.2.7",
    "joblib==1.4.2",
    "lightgbm==4.2.0",
    "polars>=1.12.0",
    "xgboost==2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"